@@ -11,6 +11,7 @@
 	    cleaner too, thanks to Allen Soard <esp-software@mail.hypermart.net>
 	* Add optional ls file sorting, thanks to a patch from 
 	    Sterling Huxley <sterling@europa.com>
+	* lsmod now uses the query_module syscall, rather then /proc
 
 
 	 -Erik Andersen
